# daily_newletter

./: .env.example  README.md  daily_newletter.py  feeds_config.py  mock_templates.py  newsletter-20260305-131118.html  newsletter-20260305-132005.html  newsletter-20260305-235348.html  newsletter-20260306-233155.html  newsletter-20260307-232728.html  newsletter-20260308-232943.html  newsletter-20260309-233239.html  newsletter-20260310-233223.html  newsletter-20260311-233115.html  newsletter-20260312-233237.html  newsletter-20260313-233258.html  newsletter-20260314-233234.html  pyproject.toml
.github/workflows/: newsletter.yml
